--- a/index.html
+++ b/index.html
@@ -9,6 +9,132 @@
     <title>Pinned Section</title>
   </head>
   <body>
+    <main>
+      <section class="one">
+        <div class="container">
+          <div class="col">
+            <h1>Entry Point</h1>
+          </div>
+          <div class="col">
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio
+              atque facilis optio velit id aliquid pariatur aperiam, officiis
+              illo libero deleniti distinctio minus officia nisi, iure a eos
+              quis natus non. Consequuntur odio accusamus nihil quae ex,
+              repellendus id officiis veniam pariatur amet accusantium ducimus
+              cumque architecto commodi iusto et corporis. Ad fugit eum beatae
+              recusandae nostrum voluptas vero sequi?
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="two">
+        <div class="container">
+          <div class="col">
+            <div class="img">
+              <img src="images/img-01.webp" alt="" />
+            </div>
+          </div>
+          <div class="col">
+            <h2>Gesture</h2>
+
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis
+              officia molestiae quia consequuntur minima! Asperiores minus iusto
+              assumenda odio, quia, error dolorem voluptatibus neque obcaecati
+              labore eum odit cumque quod ducimus magnam voluptatum
+              exercitationem, doloribus eaque. Nemo deserunt quia tenetur
+              corrupti est doloremque doloribus praesentium consectetur! Rem
+              labore, quas nemo quidem cupiditate omnis nam quaerat eum modi
+              minus reprehenderit unde!
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="three">
+        <div class="container">
+          <div class="col">
+            <h2>Variation</h2>
+
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Error
+              autem earum reiciendis corporis provident optio praesentium
+              aliquam molestiae. Consectetur aperiam laboriosam porro nihil
+              libero sed velit ducimus accusantium accusamus iusto. Dolores
+              quisquam unde nemo corrupti placeat officia nisi eos facilis quae
+              recusandae accusamus perferendis voluptate nam deleniti veniam
+              nulla beatae non ipsam facere nihil, rem, itaque voluptatem. Ab,
+              repudiandae tenetur?
+            </p>
+          </div>
+          <div class="col">
+            <div class="img">
+              <img src="images/img-02.webp" alt="" />
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="four">
+        <div class="img">
+          <img src="images/img-04.webp" alt="" />
+        </div>
+
+        <h2>The Stance</h2>
+
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. At quaerat
+          cupiditate deserunt placeat qui aliquam perspiciatis sequi labore
+          incidunt. Autem commodi beatae in unde quia est ut vel praesentium
+          quisquam?
+        </p>
+
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus
+          consectetur ipsum quis, aliquid, fuga necessitatibus facilis, culpa
+          voluptates fugit officia excepturi perspiciatis nobis amet eos
+          nesciunt exercitationem saepe. Ipsa, repellendus.
+        </p>
+      </section>
+      <section class="five">
+        <div class="container">
+          <div class="col">
+            <h2>Stillness</h2>
+          </div>
+          <div class="col">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique
+              deleniti rerum praesentium beatae quaerat nesciunt, totam laborum
+              voluptatum illo maiores, modi, quidem accusantium deserunt
+              consequuntur dicta officiis et magnam nobis iusto tenetur commodi
+              nihil? Eos totam quas esse beatae est praesentium quisquam,
+              dignissimos voluptates in, harum quae aliquid qui et vel impedit
+              earum sapiente nam sunt pariatur iusto perspiciatis. Quos.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="six">
+        <div class="container">
+          <div class="col">
+            <h2>Release</h2>
+          </div>
+          <div class="col">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo
+              iusto vel impedit quaerat aut repudiandae obcaecati molestiae
+              dolor, maiores soluta reprehenderit beatae deserunt dicta magni
+              natus rerum ad rem ducimus suscipit aliquam tenetur sint nostrum
+              perspiciatis? Molestias quos sint commodi.
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <div class="footer">
+      <h2>Footer</h2>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.14.1/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.14.1/dist/ScrollTrigger.min.js"></script>
     <script src="https://unpkg.com/lenis@1.3.17/dist/lenis.min.js"></script>
