Добавлены стили для всех секций

--- a/index.html
+++ b/index.html
@@ -82,25 +82,27 @@
         </div>
       </section>
       <section class="four">
-        <div class="img">
-          <img src="images/img-04.webp" alt="" />
+        <div class="container">
+          <div class="img">
+            <img src="images/img-04.webp" alt="" />
+          </div>
+
+          <h2>The Stance</h2>
+
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. At quaerat
+            cupiditate deserunt placeat qui aliquam perspiciatis sequi labore
+            incidunt. Autem commodi beatae in unde quia est ut vel praesentium
+            quisquam?
+          </p>
+
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Voluptatibus consectetur ipsum quis, aliquid, fuga necessitatibus
+            facilis, culpa voluptates fugit officia excepturi perspiciatis nobis
+            amet eos nesciunt exercitationem saepe. Ipsa, repellendus.
+          </p>
         </div>
-
-        <h2>The Stance</h2>
-
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. At quaerat
-          cupiditate deserunt placeat qui aliquam perspiciatis sequi labore
-          incidunt. Autem commodi beatae in unde quia est ut vel praesentium
-          quisquam?
-        </p>
-
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus
-          consectetur ipsum quis, aliquid, fuga necessitatibus facilis, culpa
-          voluptates fugit officia excepturi perspiciatis nobis amet eos
-          nesciunt exercitationem saepe. Ipsa, repellendus.
-        </p>
       </section>
       <section class="five">
         <div class="container">
